syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

option csharp_namespace = "TransactionEvent";

package TransactionEvent;

// The greeting service definition.
service TransactionEvents {
  rpc GetTransactionStream (EventRequestSetting) returns (stream TransactionEventData);
}

message TransactionEventData {
  string transactionid = 1;
  string clientid = 2;
  double amount = 3;
  google.protobuf.Timestamp transactionDateTime = 4;
  
}

message EventRequestSetting {
  int32 maxEvents = 1;
  
}